# looks-fishy

./: README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
helper/: search.py
src/: get_fishing_location.py  main.py
src/helper/: calculate_fishing_conditions.py  color_condition_result.py  format_location.py  get_condition_summary_text.py  is_data_for_date.py  print_location.py
src/location_search/: search.py  search_result.py
src/search/: search.py  search_result.py
src/tests/: test_calculate_fishing_conditions.py  test_color_condition_summary.py  test_format_location.py  test_get_condition_summary_text.py  test_is_data_for_date.py  test_print_location.py
src/tests/mock_data/: weather_data.json
src/weather_forecast/: get_weather_forecast.py  weather_response.py
tests/: test_hello_world.py  test_print_location.py
